--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "jupyterpgweb"
+name = "vocabulary"
 authors = [{name = "Thomas Kluyver", email = "thomas@kluyver.me.uk"}]
 readme = "README.rst"
 license = {file = "LICENSE"}
@@ -12,7 +12,7 @@ dependencies = ["jupyter-server-proxy >=4.0"]  # v4 required for Unix socket sup
 dynamic = ["version", "description"]
 
 [project.urls]
-Home = "https://github.com/arang129/jupyterpgweb"
+Home = "https://github.com/arang129/vocabulary"
 
 [project.entry-points.jupyter_serverproxy_servers]
-jupyterpgweb = "jupyterpgweb:setup_jupyterpgweb"
+vocabulary = "vocabulary:setup_vocabulary"
